# tm-tc-code-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
tm_tc_code_generator/: main.py
tm_tc_code_generator/templates/: package_initializer.jinja  pyproject.toml.jinja  telecommand_auto_source.jinja  telecommand_base_header.jinja  telecommand_base_source.jinja  telecommand_header.jinja  telecommand_python.jinja  telecommand_source.jinja  telemetry_auto_source.jinja  telemetry_base_header.jinja  telemetry_base_source.jinja  telemetry_header.jinja  telemetry_source.jinja
