[project]
name = "tm-tc-code-generator"
version = "0.0.0"  # Placeholder, overridden by Git tag in CI
description = ""
authors = [
    { name = "Lautaro Mendieta", email = "lemendieta96@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click (>=8.3.0, <9.0.0)",
    "jinja2 (>=3.1.6, <4.0.0)",
]

[tool.poetry.scripts]
tm-tc-code-generator = "tm_tc_code_generator.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
